[package]
name = "escrow-marketplace"
version = "0.1.0"
authors = ["Alex Kouprin <kpr@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=3.1.0"

[dev-dependencies]
near-sdk-sim = "=3.1.0"

[features]
expensive_tests = []

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
